add pages product, supplier, and stock
