# backend/src/app/Http/Controllers/Auth/Logout.php
@@ -1,0 +1,39 @@
+<?php
+
+namespace App\Http\Controllers\Auth;
+
+use Illuminate\Http\Request;
+use App\Http\Controllers\Controller;
+
+/**
+ * @OA\Post(
+ *     path="/api/auth/logout",
+ *     summary="Logout User",
+ *     tags={"Authentication"},
+ *     security={{"bearerAuth": {}}},
+ *     @OA\Response(
+ *         response=200,
+ *         description="Success Created",
+ *         @OA\JsonContent()
+ *     ),
+ *     @OA\Response(
+ *         response="400",
+ *         description="Invalid Values",
+ *         @OA\JsonContent()
+ *     ),
+ *     @OA\Response(
+ *         response="500",
+ *         description="Internal Server Error",
+ *         @OA\JsonContent()
+ *     )
+ * )
+ */
+class Logout extends Controller
+{
+    public function __invoke(Request $request)
+    {
+        $user = $request->user();
+        $user->tokens()->delete();
+        return response()->json(['message' => 'Logged out successfully'], 200);
+    }
+}
